<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item
    android:id="@+id/item_update"
    android:title="@string/update_item" />

<item
    android:id="@+id/item_del"
    android:title="@string/delete_item" />

</menu>