<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/add_item"
    android:title="@string/add_new_product_recipe_allergy_item"
    android:icon="@drawable/ic_action_add"
    app:showAsAction="always"
    />
</menu>