<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">
<EditText
    android:id="@+id/etItem"
    android:padding="10dp"
    android:layout_margin="4dp"
    android:hint="@string/add_new_product_recipe_allergy_item"
    android:inputType="text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="yes"/>
</LinearLayout>
